#ifndef ELEMENT_HPP
#define ELEMENT_HPP

class Element{

};

#endif
