#ifndef ENTITY_HPP
#define ENTITY_HPP

class Entity{

};

#endif
