#ifndef PLAYER_HPP
#define PLAYER_HPP

class Player{

};

#endif
